- feature: open containing folder of queues